--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<header>
+		Rajneeti
+	</header>
+
+	<nav>
+		<a href="" id="nav-actor">actor</a>
+		<a href="" id="nav-quote">quote</a>
+	</nav>
+
+	<summary>it was great experiance watching this beast</summary>
+
+	<section id="actor">sharukh khan</section>
+	<section id="quote"> shiddattt</section>
+
+	<aside>it has 6 imdb rating</aside>
+
+	<footer>Produced by: Mangesh <></footer>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
