--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	</header>
 
 	<nav>
-		<a href="" id="nav-actor">actor</a>
-		<a href="" id="nav-quote">quote</a>
+		<a href="#actor" id="nav-actor">actor</a>
+		<a href="#quote" id="nav-quote">quote</a>
 	</nav>
 
 	<summary>it was great experiance watching this beast</summary>
